examples/gateway.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lbk-gateway
spec:
  gatewayClassName: eg
  listeners:
  - name: web
    port: 80
    protocol: HTTP
