examples/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    part-of: nginx-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        part-of: nginx-example
    spec:
      containers:
      - name: nginx
        image: dockerhub.kubekey.local/qce/nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    part-of: nginx-example
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  labels:
    app: nginx
    app.kubernetes.io/part-of: envoy-gateway
spec:
  parentRefs:
  - name: eg
  hostnames:
  - "nginx.local"  # 可选：指定主机名
  rules:
  - backendRefs:
    - name: nginx
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
